# pyapp-cookie-demo

./: LICENSE  README.rst  pyproject.toml  setup.py
pyapp-cookie-demo/: __init__.py  __main__.py
