[tool.poetry]
name = "pyapp-cookie-demo"
version = "0.1.0"
description = "https://dan.yeaw.me/posts/python-packaging-with-poetry-and-briefcase/"
authors = ["kevinnguyenai <kevin.nguyen.ai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5.2"
briefcase = "^0.2.9"
toga = "^0.2.15"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
